# TaskWeaverRemake

./: README.md  hello.py  pyproject.toml
config/: config_template.yaml  test_config.yaml
src/: main.py
src/base_agent/: __init__.py  base_agent.py
src/cases/codes/: code_000.yaml  code_001.yaml  code_002.yaml
src/cases/plans/: plan_000.yaml  plan_001.yaml  plan_002.yaml
src/code_interpreter/: __init__.py  code_interpreter.py  code_interpreter_prompt.yaml
src/code_interpreter/src/workspaces/test/: execution_log.ipynb
src/environment_context_manager/: __init__.py  context_manager.py
src/logs/: 20250222_155531_environment_context.json  20250222_160256_environment_context.json
src/planner/: planner.py  planner_prompt.yaml
src/workspaces/analysis_ili/: execution_log.ipynb  吴淞.xlsx
src/workspaces/annotation_ili/: execution_log.ipynb  症状监测（吴淞医院）初筛版20250106.xlsx
src/workspaces/test/: execution_log.ipynb  test2.txt  test3.txt
